<resources>
    <string name="app_name">XchangeApplication</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="title_activity_user_profile">UserProfileActivity</string>
    <string name="action_postad">Post Ad</string>
    <string name="action_editprofile">Edit Profile</string>
    <string name="title_app">XChange</string>
    <color name="blue">#2B3D4F</color>
    <string name="title_activity_post_ad">PostAdActivity</string>
    <string name="title_hint">Title</string>
    <string name="description_hint">Description</string>
    <string name="city_hint">City</string>
    <string name="locality_hint">Locality</string>
    <string name="category_hint">Category</string>
    <string name="select_location">Select Location</string>
    <string name="prefferedExchangeItem">Preferred Exchange Item</string>
</resources>
