<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.postAd.PostAdActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:background="@color/blue">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/action_postad"
        android:textColor="@color/white"
        android:gravity="center"/>

</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title_hint"
            android:id="@+id/adTitle"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/category_hint"
            android:id="@+id/adCategory"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description_hint"
            android:id="@+id/adDescription"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/city_hint"
            android:id="@+id/adCity"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/locality_hint"
            android:id="@+id/adLocality"/>
        <!--<RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
            <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_location"
                android:id="@+id/adLocation"
            android:paddingLeft="5dp" android:textAppearance="@style/TextAppearance.AppCompat.Medium"

           />-->
        <!--<RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/adLocationMap"
        android:drawableRight="@drawable/arrow"
       />
        </RelativeLayout>
</RelativeLayout>
    -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="5dp"
            >
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/isExchange"
                    android:checked="false"
                    android:text="Exchange"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Sell"
                    android:checked="false"
                    android:id="@+id/isSell"/>
            </RadioGroup>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            android:id="@+id/dynamicAttributes">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/preferredExchangeItem"
                android:hint="@string/prefferedExchangeItem"/>

        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Submit"
            android:layout_marginLeft="10dp"
            android:background="@color/blue"
            android:id="@+id/submitAdButton"
            android:textColor="@color/white"
            android:textAllCaps="false"/>
    </LinearLayout>


</LinearLayout>
